--- a/.github/actions/deploy.yml
+++ b/.github/actions/deploy.yml
@@ -32,6 +32,9 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
+      - name: create .npmrc
+        run: echo "//registry.npmjs.org/:_authToken=${{secrets.NPM_TOKEN}}" > .npmrc
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.0.0
         with:
