--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@tanstack/react-query": "^5.62.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "connectkit": "^1.8.2",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4",
     "viem": "^2.21.48",
+    "wagmi": "^2.14.0",
     "zod": "^3.24.0"
   },
   "devDependencies": {
